# ChatGPT-Next-Web

./: Dockerfile  README.md  README_CN.md  next.config.mjs  package.json
app/: constant.ts
app/api/openai/[...path]/: route.ts
app/client/: api.ts
app/components/: chat.tsx  emoji.tsx  exporter.tsx  sidebar.tsx
app/config/: server.ts
app/masks/: cn.ts
app/store/: access.ts  config.ts
docs/: faq-cn.md  faq-en.md  faq-es.md  faq-ja.md  faq-ko.md
src-tauri/: Cargo.toml  tauri.conf copy.json  tauri.conf.json
src-tauri/src/: main.rs
