[package]
name = "chatgpt"
version = "0.1.0"
description = "A cross platform app for LLM ChatBot."
authors = ["test"]
license = "mit"
repository = ""
default-run = "chatgpt"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [ "window-set-resizable", "fs-all", "window-hide", "window-start-dragging", "shell-open", "window-show", "clipboard-all", "window-unmaximize", "window-set-icon", "window-close", "window-unminimize", "window-set-ignore-cursor-events", "window-maximize", "window-minimize", "dialog-all", "notification-all", "updater"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4"
simplelog = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
